tests/rosetta/out/Haskell/arithmetic-geometric-mean.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/arithmetic-geometric-mean.hs:124:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-geometric-mean.hs:119:1
                 /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-geometric-mean.hs:124:1
    |
124 | main = do
    | ^^^^
